fix: show failed deploys in bird status and bird ls
